--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "microbit-c"]
-	path = microbit-c
+[submodule "microbit/microbit-c"]
+	path = microbit/microbit-c
 	url = git@github.com:lancaster-university/microbit-v2-samples.git
